--- a/battleHandbook.html
+++ b/battleHandbook.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>我的世界-资料站-游戏图鉴-战斗图鉴</title>
+		<title>我的世界-资料站-游戏图鉴-战图鉴</title>
 		<script src="js/jq.js"></script>
 		
 		<script src="bootstrap-4.3.1/dist/js/bootstrap.js"></script>
